--- a/book/style.css
+++ b/book/style.css
@@ -1,9 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Russo+One&display=swap");
+
+
 *{
 padding: 0;
 margin: 0;
 box-sizing: border-box;
 list-style: none;
 text-decoration: none;
+font-family: 'Russo One';
 }
 
 
@@ -19,57 +24,135 @@ html, body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(#804721 ,#8F5A35);
+    background: url('img/bg.jpg');
+}
+.wrapper::before{
+    content: '';
+    width: 100%;
+    height: 100%;
+   position: absolute;
+    background: rgba(0, 0, 0, 0.585);
+    z-index: 1;
 }
 
+.searchzone{
+    width: 30%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    z-index: 3;
+    
+}
+
+
+
+
+
+
 .search{
-    width: 20%;
-    height: 75%;
-    background: #32261a;
+    width: 80%;
+    height: 80%;
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border:1px solid rgba(255, 255, 255, 0.18);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
     margin: calc(10% / 6);
-    border-radius: 20px;
+    border-radius: 20px ;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    z-index: 2;
 }
+
+
 
 .inpSearch{
     width: 90%;
     height: 8%;
     border-radius: 10px;
     border: none;
-    background: #8F5A35;
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border:1px solid rgba(255, 255, 255, 0.18);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
     text-align: center;
     color: aliceblue;
     font-size: 150%;
-    margin: calc(7% / 3);
-}
-.placeOfRec{
-    width: 90%;
-    height: 85%;
-    background: #ffd8a9;
-    border-radius: 10px;
-    margin: calc(7% / 3);
+    
 
 }
-.bookzone{
-    width: 70%;
-    height: 80%;
-    margin: calc(10% / 6);
+.inpSearch::placeholder{
+    color: aliceblue;
+}
+
+.searchBtn{
+    width: 60%;
+    height: 8%;
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border:1px solid rgba(255, 255, 255, 0.18);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+    border-radius: 20px;
+    text-align: center;
+    font-size: 100%;
+    color: aliceblue;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 2%;
+    cursor: pointer;
+}
+
+.recepts{
+    width: 100%;
+    height: 90%;
+    
+    
+}
+
+.placeOfRec{
+    width: 90%;
+    height: 85%;
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.106), rgba(255, 255, 255, 0));
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border:1px solid rgba(255, 255, 255, 0.18);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+    border-radius: 10px;
+    margin: calc(7% / 3);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.bookzone{
+    width:70%;
+    height: 100%;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+    z-index: 3;
 }
 
 
 .page{
     color: black;
     background: #ffd8a9;
-    
+    container-type: inline-size;  
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+   
 }
 
 .first-page{
@@ -80,4 +163,120 @@ html, body{
 }
 
 
+#flipbook{
+    transition: 2s;
+}
 
+
+.next{
+    width: 15cqw;
+    height: 15cqw;
+    position: absolute;
+    left: 2%;
+    top: 87%;
+    background: url('img/next.png') no-repeat;
+    background-size: 100%;
+    cursor: pointer;
+}
+
+.back{
+    width: 15cqw;
+    height: 15cqw;
+    position: absolute;
+    left: 83%;
+    top: 86.9%;
+    background: url('img/next.png') no-repeat;
+    background-size: 100%;
+    cursor: pointer;
+    transform: scale(-1,1);
+}
+
+
+.page .blockW{
+    width: 100%;
+    height: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.page .op{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: 50%;
+    margin: 5%;
+}
+
+.page p{
+    font-family: 'Lobster', cursive;
+}
+.page h2{
+    font-family: 'Lobster', cursive;
+    cursor: pointer;
+}
+
+.blockW .img{
+    width: 25%;
+    height: 85%;
+    background: red;
+    border-radius: 20px;
+    margin: calc(5% / 2);
+}
+
+
+.blockW .ing{
+    width: 70%;
+    height: 85%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: calc(5% / 2);
+}
+
+.ing p{
+    font-size: 100%;
+}
+
+
+.btn{
+    transition: 0.5s;
+    height: 9%;
+    width: 28%;
+    background: #804721;
+    color:white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border-radius: 20px;
+    cursor: pointer;
+    box-shadow: 0 0 10px 1px black;
+    margin: 3%;
+}
+
+.btn:hover{
+    transition: 0.5s;
+    background: #ffffff;
+    color:rgb(0, 0, 0);
+    
+}
+
+
+.numL{
+    color: black;
+    position: absolute;
+    top: 97%;
+    left: 3%;
+}
+
+.numR{
+    color: black;
+    position: absolute;
+    top: 97%;
+    left: 97%;
+}
