new work with objects

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ html,
 body {
     height: 100%;
     width: 100%;
+    color: white;
 }
 *{
     font-family: 'Russo One';
@@ -48,6 +49,7 @@ body {
     background: #C7976C;
     border-radius: 10px;
     transition: 1s;
+    cursor: pointer;
 }
 .b-panel-in-left-panel:hover{
     opacity: 1;
@@ -61,6 +63,7 @@ body {
     background: #C7976C;
     border-radius: 10px;
     transition: 1s;
+    cursor: pointer;
 }
 .c-panel-in-left-panel{
     opacity: 0.55;
@@ -74,6 +77,7 @@ body {
     background: #C7976C;
     border-radius: 10px;
     transition: 1s;
+    cursor: pointer;
 }
 .c-panel-in-left-panel:hover{
     opacity: 1;
@@ -180,52 +184,133 @@ body {
     margin-left: 22.7%;
     height: 97%;
     width: 76.5%;
-    background: green;
-    opacity: 0.45;
+    background: rgba(145,93,50, 0.45);
     border-radius: 6px;
     position: absolute;            
     top: 50%;                        
     transform: translate(0, -50%)
 }
+
+
+
 .blydo{
     height: 85%;
     width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
 }
+
+.blydo1{
+    height: 85%;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+}
+
+.rec{
+   
+    width: 90%;
+    height: 6%;
+    background: linear-gradient(135deg, rgba(0, 0, 0, 0.572), rgba(0, 0, 0, 0.224));
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border-radius: 20px;
+    border:1px solid rgba(255, 255, 255, 0.18);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1%;
+    color: white;
+
+
+    
+}
+
+
+.rec1{
+   
+    width: 90%;
+    height: 6%;
+    background: linear-gradient(135deg, rgba(0, 0, 0, 0.572), rgba(0, 0, 0, 0.224));
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border-radius: 20px;
+    border:1px solid rgba(255, 255, 255, 0.18);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1%;
+    color: white;
+}
+
+.dishplace{
+    height: 15%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
 .add-dish{
-    position: fixed;
+    
+    transition: 1s;
+   cursor: pointer;
     bottom: 5px;
-    margin:0 50% 0 50%;
-    height: 40px;
-    width: 160px;
-    border-radius: 100% ;
-    border-radius: 50px;
+    width: 15%;
+    height: 60%;
+    position: relative;
+    border-radius: 20px;
     border: 1px solid black;
     display: flex;
     align-items: center;
     justify-content: center;
-    background: rgba(255, 255, 255, 0.5);;
-    
+    background: rgba(39, 39, 39, 0.5);
+    background: linear-gradient(135deg, rgba(39, 39, 39, 0.5), rgba(39, 39, 39, 0.2));
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border-radius: 20px;
+    border:1px solid rgba(255, 255, 255, 0.18);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
 }
 .add-dish::before{
     content: '';
     width: 2%;
-    height: 80%;
+    height: 50%;
     background: black;
     position: absolute;
-    top: 7.5%;
-    left: 12%;
+    top: 25%;
+    left: 15%;
     
     
 }
 .add-dish::after{
     content: '';
     width: 2%;
-    height: 80%;
+    height: 50%;
     background: black;
     position: absolute;
-    top: 7.5%;
-    left: 12%;
+    top: 25%;
+    left: 15%;
     transform: rotate(90deg);
     
 }
 
+
+.delete{
+    position: absolute;
+    width: 3%;
+    height: 80%;
+    background: url('img/img.png') no-repeat;
+    background-size: 90%;
+    top: 10%;
+    left: 95%;
+}
